[tool.poetry]
name = "porlygon"
version = "0.1.0"
description = ""
authors = ["infcode <infcode@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
torchvision = "^0.13.1"
gym = "^0.26.2"
scikit-image = "^0.19.3"
torchmetrics = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
