[tool.poetry]
name = "porlygon"
version = "0.1.0"
description = ""
authors = ["infcode <infcode@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
gym = "^0.26.2"
scikit-image = "^0.19.3"
torchmetrics = "^0.10.0"
# Pygame is required if you want to render the gym environment.
pygame = {version = "^2.1.2", optional = true} 
tianshou = "^0.4.10"

[tool.poetry.extras]
render = ["pygame"]

[tool.poetry.group.test.dependencies]
torchsummary = "^1.5.1"
torchinfo = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
